--- a/dots/.config/gtk-2.0/gtkfilechooser.ini
+++ b/dots/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,11 +1,11 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
-ShowSizeColumn=true
-GeometryX=1495
-GeometryY=445
+ShowHidden=true
+ShowSizeColumn=false
+GeometryX=862
+GeometryY=439
 GeometryWidth=840
 GeometryHeight=630
 SortColumn=name
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
