--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
+
+set-option -sg escape-time 10
 
 unbind C-b
 set -g prefix C-a
